Improvements and API changes in version 2.4.0

1. Deprecated class StronglyConnectedComponents because it is
   inefficient. There is a new class StronglyConnectedComponentsFast
   that implements Tarjan's algorithm and is very efficient.
   
2. Changed type parameter of PatchingChain to be a subtype of Unit
   because this is what the implementation actually requires.

3. Added Hossein Sadat-Mohtasham's implementation of program dependency
   graphs.
   
4. Added new phase option "reflection-log" to support TamiFlex
   reflection log files. This option allows Spark to construct sound
   call graphs and points-to sets even for programs that use reflection.
   More information is available at:
   http://code.google.com/p/tamiflex/wiki/DaCapoAndSoot

Improvements and API changes in version 2.3.0

1. Integrated new JastAdd-based frontend with support for Java 5
   source code. Thanks to Torbjorn Ekman for contributing his
   frontend and his implementation of Java2Jimple!
   If you like to use the old polyglot-based frontend then
   just give the -polyglot command line option (Java 1.4 only).
   
2. At the very least if -validate is on, Soot now checks that @this
   is only assigned in the first statement of an instance method.
   This has always been an implicit assumption for Jimple code
   but up until now was not enforced. Code transformations written
   by clients should make sure to restore this invariant before
   transforming Jimple into another intermediate representation
   or into bytecode. (Eric Bodden)  
   
3. Integrated full support for preserving annotations in Jimple
   and writing them to bytecode. SOURCE level annotations are
   preserved if code is read from source and the flag
   -p jb preserve-source-annotations is given. (does not hold for
   package and local variable annotations) SOURCE level annotations
   are not written into bytecode by Soot.
   Annotations can easily be added to SootClass, SootMethod and